# www.redscale.company

./: .gitattributes  .gitignore  00-user-guide.md  01-roadmap.md  02-mentalmap.md  Descricao-LP.docx  HOSTINGER_DEPLOY.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
app/frontend/: .htaccess  about.html  contact.html  contato.html  dev_server.py  em-construcao.html  greenscale.css  greenscale.html  home.html  index.html  main.js  numbear.html  paint-animations.css  redsights-radar1.html  redsights.html  solucoes.html  stockhandle.html  styles.css
app/frontend/archive/: about.html  contact.html  em-construcao.html  greenscale.html  products.html
app/frontend/assets/images/: 1689199615218.jfif
app/frontend/fonts/: PlayfairDisplay-OFL.txt
archive/legacy-project/: 03-prompts-guide.md  04-solution-research.md  README.md  project_brief.yaml
archive/legacy-project/orquestrador-projeto/rules/: 01-memory-and-evidence.md  02-safe-execution.md  03-change-control.md  README.md
archive/legacy-project/orquestrador-projeto/skills/: 02-milestone-planning.md  04-web-design-motion-build.md
archive/legacy-project/orquestrador-projeto/workflows/: 01-discovery-and-scope.md  02-implementation-cycle.md  README.md
archive/legacy-project/src/orquestrador_projeto/: cli.py
bootstrap/: bootstrap.ps1  bootstrap.sh  clean.ps1  clean.sh  test.ps1  test.sh
orquestrador-projeto/skills/: 01-context-rebuild.md  03-execution-cycle.md  README.md
orquestrador-projeto/workflows/: 03-release-and-handoff.md  04-site-construction.md
